--- a/_config.yml
+++ b/_config.yml
@@ -83,6 +83,10 @@ featured-condition-size: 1              # A tag will be featured if the size of 
 # Friends
 friends: [
     {
+        title: "黄玄的博客 | Hux Blog",
+        href: "http://huangxuan.me/"
+    },
+    {
         title: "Xuxinkun",
         href: "http://xuxinkun.github.io/"
     }
